--- a/main.css
+++ b/main.css
@@ -28,7 +28,7 @@ body,html {
 */
 #landing-section {
 
-  background: url( 'res/dark_wall.png' ) fixed;
+  background: url( 'res/escheresque_ste.png' ) fixed;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -50,7 +50,7 @@ nav {
   width: 80%;
   margin-top: 2%;
 
-  max-width: 1500px;
+  max-width: 1300px;
 }
 
 nav h1 {
@@ -100,7 +100,7 @@ nav #nav-right a:hover {
   font-size: 1.5em;
   width: 80%;
 
-  max-width: 1500px;
+  max-width: 1300px;
 }
 
 #landing-text h1 {
@@ -148,7 +148,7 @@ nav #nav-right a:hover {
   margin-bottom: 3%;
   justify-content: center;
 
-  max-width: 1500px;
+  max-width: 1300px;
 }
 
 #landing-bottom .landing-item {
@@ -193,7 +193,7 @@ nav #nav-right a:hover {
   display: flex;
   align-items: center;
   flex-direction: column;
-  background: url( 'res/dark_wall.png' ) fixed;
+  background: url( 'res/escheresque_ste.png' ) fixed;
   color: #ecf0f1;
 }
 
@@ -204,7 +204,7 @@ nav #nav-right a:hover {
 #projects #wrap {
   width: 80%;
   margin-bottom: 3%;
-  max-width: 1500px;
+  max-width: 1300px;
   display: flex;
   flex-wrap: wrap;
 }
