--- a/main.css
+++ b/main.css
@@ -157,9 +157,8 @@ nav #nav-right a:hover {
 }
 
 #landing-bottom .landing-item {
-
   flex-grow: 1;
-  flex-basis: 30%;
+  flex-basis: 300px;
   display: flex;
   flex-direction: column;
   justify-content: center;
