--- a/main.css
+++ b/main.css
@@ -149,7 +149,7 @@ nav #nav-right a:hover {
 }
 
 #landing-bottom {
-  min-height: 40vh;
+  /*min-height: 40vh;*/
   display: flex;
   flex-direction: column;
   align-items: center;
