--- a/main.css
+++ b/main.css
@@ -67,7 +67,7 @@ nav #nav-left h1::after {
   height: 3px;
   bottom: -3px;
   left: 0;
-  background: linear-gradient( 140deg, white 0%, white 40%, #3498db 40%, #3498db 50%, red 50%, red 60%, white 60%, white 100% );
+  background: linear-gradient( 140deg, #ecf0f1 0%, #ecf0f1 40%, #3498db 40%, #3498db 50%, red 50%, red 60%, #ecf0f1 60%, #ecf0f1 100% );
 }
 
 nav #nav-left {
