--- a/main.css
+++ b/main.css
@@ -63,11 +63,11 @@ nav #nav-left h1 {
 nav #nav-left h1::after {
   content: '';
   position: absolute;
-  width: 120%;
+  width: 105%;
   height: 3px;
   bottom: -3px;
   left: 0;
-  background: linear-gradient( 140deg, #ecf0f1 0%, #ecf0f1 40%, #3498db 40%, #3498db 50%, red 50%, red 60%, #ecf0f1 60%, #ecf0f1 100% );
+  background: linear-gradient( 140deg, #ecf0f1 0%, #ecf0f1 40%, #3498db 40%, #3498db 47%, #1d6ea4 47%, #1d6ea4 53%, red 53%, red 60%, #ecf0f1 60%, #ecf0f1 100% );
 }
 
 nav #nav-left {
