update nav hover underline color

--- a/main.css
+++ b/main.css
@@ -103,7 +103,7 @@ nav #nav-right a {
 }
 
 nav #nav-right a:hover {
-  border-bottom-color: #3498db;
+  border-bottom-color: #1d6ea4;
 }
 
 #landing-text {
