--- a/main.css
+++ b/main.css
@@ -48,6 +48,7 @@ nav {
   display: flex;
   /*margin-top: 2%;
   margin-bottom: 2%;*/
+  width: 100%;
   padding-top: 2%;
   padding-bottom: 2%;
 
@@ -56,7 +57,7 @@ nav {
   right: 0;
 
   justify-content: center;
-  
+
 }
 
 nav #wrap {
