--- a/main.css
+++ b/main.css
@@ -37,6 +37,7 @@ body,html {
   color: #ecf0f1;
   font-family: sans-serif;
   border-bottom: 5px solid #3498db;
+
 }
 
 .lg {
@@ -134,8 +135,8 @@ nav #nav-right a:hover {
   font-size: 1.5em;
   width: 80%;
   max-width: 1300px;
-  padding-bottom: 6%;
-  padding-top: 6%;
+  padding-bottom: 4em;
+  padding-top: 4em;
 }
 
 #landing-text h1 {
