responsive contact inputs

--- a/main-sm.css
+++ b/main-sm.css
@@ -42,6 +42,10 @@ nav #wrap {
   width: 100%;
 }
 
+#contact .input-item input {
+  font-size: 2em;
+}
+
 #contact #message-input {
   width: 100%;
 }
