--- a/main.css
+++ b/main.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 body,html {
   margin: 0;
   padding: 0;
   background-color: #ecf0f1;
   line-height: 1.5;
+  font-family: 'Roboto', sans-serif;
 }
 
 * {
@@ -35,13 +38,9 @@ body,html {
   align-items: center;
   z-index: 5000;
   color: #ecf0f1;
-  font-family: sans-serif;
+
   border-bottom: 5px solid #3498db;
 
-}
-
-.lg {
-  font-size: 2em;
 }
 
 
@@ -173,7 +172,7 @@ nav #nav-right a:hover {
   flex-direction: column;
   align-items: center;
   color: black;
-  font-family:sans-serif;
+
   border-bottom: 5px solid #3498db;
 }
 
@@ -221,7 +220,7 @@ nav #nav-right a:hover {
 
 #landing-bottom p {
   margin: 0;
-  font-size: 1.2em;
+  font-size: 1em;
   margin-top: 0.3em;
   width: 100%;
   text-align: center;
@@ -242,7 +241,7 @@ nav #nav-right a:hover {
 }
 
 #projects h2 {
-  font-family: sans-serif;
+
 }
 
 #projects #wrap {
@@ -271,7 +270,6 @@ nav #nav-right a:hover {
   flex-direction: column;
   margin-left: 1em;
 
-  font-family: sans-serif;
 }
 
 #projects .project-item h3 {
@@ -316,7 +314,7 @@ nav #nav-right a:hover {
 }
 
 #contact .section-header {
-  font-family: sans-serif;
+
 }
 
 #contact #wrap {
@@ -345,7 +343,7 @@ nav #nav-right a:hover {
 }
 
 #contact label {
-  font-family: sans-serif;
+
 }
 
 #contact .input-item input {
@@ -360,7 +358,6 @@ nav #nav-right a:hover {
 
 #contact #message-input textarea {
   width: 100%;
-  font-family: sans-serif;
   height: 8em;
   font-size: 1em;
   padding: 0.5em;
@@ -398,18 +395,20 @@ nav #nav-right a:hover {
   height: 4em;
 }
 #bio-area h3 {
-  font-family: sans-serif;
   font-size: 1.5em;
   margin: 0;
 }
 #bio-area p {
-  font-family: sans-serif;
   margin: 0;
+  font-size: 1em;
 }
 
 
 
 footer {
-  background: url( 'res/ep_naturalblack.png' ) fixed;
-  padding: 2em;
+  background: #2c3e50;
+  display: flex;
+  justify-content: space-around;
+  padding: 1em;
+  color: #ecf0f1;
 }
